--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-catalog-view": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.5",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,11 +45,9 @@
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
   },
-  "plugins":{
-  "plugins": [
-    "@babel/plugin-syntax-import-assertions"
-  ]
+  "plugins": {
+    "plugins": [
+      "@babel/plugin-syntax-import-assertions"
+    ]
+  }
 }
-  
-}
-
