--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.5.0",
     "react-catalog-view": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.5",
     "styled-components": "^5.3.6",
