Tablas distintas por familia terminado. Falta redirigir

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material/theme": "^14.0.0",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +20,7 @@
     "mdb": "^0.1.0",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-catalog-view": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.0",
