--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-grid-gallery": "^1.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "reactstrap": "^9.1.5",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
